Added Todo tab to track planned changes and additions. Changed colours. Added summary to Reporting tab.

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -4,4 +4,8 @@
 
 .new-line {
     white-space: pre-line;
-  }
+}
+
+a.anchor{
+    display: block; position: relative; top: -250px; visibility: hidden;
+}
