--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,4 +1,4 @@
-.tab-content{
+.tab-content {
   margin-top: 60px;
 }
 
@@ -8,4 +8,13 @@
 
 .report-warning {
   background-color: lightcoral;
+}
+
+a.anchor{
+  display: block; position: relative; top: -60px; visibility: hidden;
+}
+
+.summaryLink {
+  color: black;
+  text-decoration: none;
 }
