--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -18,3 +18,66 @@ a.anchor{
   color: black;
   text-decoration: none;
 }
+
+.tooltip {
+  position: relative;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -60px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
+}
+
+.tableCell{
+  position:relative;
+  overflow: visible;
+}
+
+.tableCellTooltip{
+  display:none;
+  position: absolute;
+  /* position:fixed; */
+  transform:translate(10px,10px);
+  z-index:100;
+  border:1px;
+  background-color:white;
+  border-style:solid;
+  border-width:1px;
+  border-color:red;
+  padding:3px;
+  color:red; 
+  /* top:20px; 
+  left:20px; */
+}
+
+.tableCell:hover span.tableCellTooltip{
+  display:block;
+}
